add Rocket Placeholder and contact

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 
+//FIXME
 /************ Custom Font ************/
 
 
@@ -65,9 +66,4 @@ p.success {
 
 p.danger {
     color: red;
-}
-
-
-.app {
-    min-height: 100vh;
 }
